--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,8 +22,7 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.zerobits.android.chime"
-	android:versionName="@string/version"
-	android:versionCode="2">
+	android:versionName="@string/version" android:versionCode="3">
 	<application
 		android:icon="@drawable/icon"
 		android:label="Chime"
